# codemod2

./: .gitignore  .pyre_configuration  CODE_OF_CONDUCT.md  CONTRIBUTING.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: workflow.yml
.stubs/pcre2/: __init__.pyi  consts.pyi  exceptions.pyi  match.pyi  methods.pyi  pattern.pyi  scanner.pyi
codemod/: base.py
codemod2/: base.py  patch.py  position.py
