[tool.poetry]
name = "codemod2"
version = "0.1.4"
description = "a fork of facebook/codemod using pcre regular expressions"
authors = ["Martin Drohmann <mdrohmann@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.scripts]
codemod2 = "codemod2.base:main"

[tool.poetry.dependencies]
python = "^3.11"
regex = "^2023.12.25"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.13"
pyre-check = "^0.9.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
